--- a/src/main/webapp/WEB-INF/template/cliente/BotoesCliente.xhtml
+++ b/src/main/webapp/WEB-INF/template/cliente/BotoesCliente.xhtml
@@ -6,11 +6,12 @@
 
 	<p:toolbar style="margin-top: 20px">
 		<p:toolbarGroup>
-			<p:button value="Novo"  />
-			<p:commandButton value="Salvar" />
+			<p:button value="Novo" outcome="/cliente/CadastroCliente.xhtml" />
+			<p:commandButton value="Salvar"
+				action="#{cadastroClienteBean.salvar}" update="@form" ajax="false"/>
 		</p:toolbarGroup>
 		<p:toolbarGroup align="right">
-			<p:button value="Pesquisa"  />
+			<p:button value="Pesquisa" outcome="/cliente/PesquisaCliente.xhtml" />
 		</p:toolbarGroup>
 	</p:toolbar>
 </ui:composition>
